force-app/main/default/objects/custom_create262__c/custom_create262__c.object-meta.xml
<CustomObject>
    <label>Custom created object262</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects262</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>