force-app/main/default/objects/custom_create262__c/fields/custom_create_262field526__c.field-meta.xml
<CustomField>
    <fullName>custom_create_262field526__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 262field526</label>
    <type>Checkbox</type>
</CustomField>